submit and password

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
 <form>
-Name <input name="user">
+Username <input name="un"> <br>
+Password <input name="pw" type="password"> <br> 
+<input type="submit">
 </form>
