Linked style sheet

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,10 @@
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fitness-4-U</title>
-        <style>
-            body { text-align: center; font-family: Arial, sans-serif; background-color: white; }
-            .header { font-size: 36px; font-weight: bold; margin: 20px; }
-            .top-buttons { display: flex; justify-content: space-between; padding: 10px; }
-            .button { padding: 10px 20px; background-color: rgb(0, 64, 255); color: black; border: none; cursor: pointer; border-radius: 5px; }
-            .main-buttons { display: flex; justify-content: center; gap: 80px; margin-top: 250px; }
-            .green-button { padding: 20px 50px; background-color: lightgreen; border: none; cursor: pointer; border-radius: 5px; }
-            .logo { position: absolute; bottom: 20px; right: 20px; padding: 10px; border-radius: 5px; }
-            .separator { height: 2px; background-color: black; margin: 20px 0; }
-        </style>
+        <link rel="stylesheet" href={{ url_for('static', filename='style.css') }}>
     </head>
     <body>
         <div class="container">
@@ -33,5 +26,6 @@
             <div class="logo"><img src="/static/Logo.jpg" alt="running man logo" width = 125px, height = 125px></div>
         </div>
     </body>
+</html>
 
 <!--.container { width: 80%; margin: auto; padding: 20px; border: 2px solid black; border-radius: 20px; margin-top: 50px;-->
