--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,20 @@
-<form method="post">
-    email: <input name="email"> <br>
-    password: <input name="password" type="password"> <br>
-    <input type="submit">
-</form>
-<a href= "{{ url_for('index') }}">
-    <button class="button">Home</button>
-</a>
-<a href= "{{ url_for('signup') }}">
-    <button class="button">Signup</button>
-</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Login</title>
+        <link rel="stylesheet" href={{ url_for('static', filename='style.css') }}>
+    </head>
+    <body>
+        <form method="post">
+            email: <input name="email"> <br>
+            password: <input name="password" type="password"> <br>
+            <input type="submit">
+        </form>
+        <a href= "{{ url_for('index') }}">
+            <button class="button">Home</button>
+        </a>
+        <a href= "{{ url_for('signup') }}">
+            <button class="button">Signup</button>
+        </a>
+    </body>
+</html>
