--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,7 @@
         <label>Date of Birth:</label>
         <input type="date" name="dob" required>
         <p></p>
-        <button type="submit" {% if email_exists %}disabled{% endif %}>Sign Up</button>
+        <button type="submit" {% if email_exists %}disabled{% endif %}>Confirm</button>
     </form>
 </body>
 </html>
