linked session to calorie tracking

--- a/templates/calorieEntering.html
+++ b/templates/calorieEntering.html
@@ -11,7 +11,7 @@
                 <a href= "{{ url_for('index') }}">
                 <button class="button">Home</button>
                 </a>
-                <div class="header">Calorie Tracking</div>
+                <div class="header">Calorie Entering</div>
             </div>
             
             <div class="separator"></div>
@@ -29,11 +29,7 @@
 
             <div id="myPlot" style="width:100%;max-width:700px"></div>
 
-            <div class="main-buttons">
-                <button class="orange-button">Calorie entering</button>
-                <a href= "{{ url_for('index') }}">
-                    <button class="button">Home</button>
-                    </a>
+        
             </div>
         </div>
     </body>
