--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <button class="button">Login</button>
                 </a>
             </div>
-            
+            <a href="/logout">Log out</a>
             <div class="separator"></div>
             
             <div class="main-buttons">
