added progress page

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,9 @@
                     <button class="green-button">Progress</button>
                 </a>
                 <button class="green-button">Food Diary</button>
+                <a href= "{{ url_for('createWorkout') }}">
                 <button class="green-button">Create Workout</button>
+                </a>
             </div>
             
             <div class="logo"><img src="/static/Logo.jpg" alt="running man logo" width = 125px, height = 125px></div>
