--- a/templates/progress.html
+++ b/templates/progress.html
@@ -20,7 +20,10 @@
                 <a href= "{{ url_for('calorieTracking') }}">
                     <button class="orange-button">Calorie Tracking</button>
                 </a>
+                <!--Button to get to weight tracking-->
+                <a href= "{{ url_for('weightTracking') }}">
                 <button class="orange-button">Weight Tracking</button>
+                </a>
             </div>
         </div>
     </body>
